--- a/index.html
+++ b/index.html
@@ -2,197 +2,277 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>İsme Özel Doğum Günü Şarkıları</title>
-  <link rel="stylesheet" href="style.css?v=4" />
-  <link rel="preconnect" href="https://cdn.jsdelivr.net" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+
+  <title>İsme Özel Doğum Günü Şarkıları 🎂 | 200+ İsim</title>
+  <meta name="description" content="İsme özel doğum günü şarkıları! 200'den fazla isim için YouTube videoları. Arayın, dinleyin ve WhatsApp/Instagram/Facebook’ta paylaşın. 🎉" />
+  <meta name="keywords" content="doğum günü şarkısı, isimli doğum günü şarkısı, isme özel şarkı, iyi ki doğdun, isim şarkısı" />
+  <link rel="canonical" href="https://seninsiten.com/" />
+  <meta name="robots" content="index,follow" />
+
+  <!-- Open Graph / Twitter -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="İsme Özel Doğum Günü Şarkıları 🎂" />
+  <meta property="og:description" content="200+ isim için doğum günü şarkısı. Arayın, dinleyin ve tek tıkla paylaşın." />
+  <meta property="og:image" content="https://seninsiten.com/cover.png" />
+  <meta property="og:url" content="https://seninsiten.com/" />
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "MusicPlaylist",
+    "name": "İsme Özel Doğum Günü Şarkıları",
+    "description": "200+ isim için hazırlanmış özel doğum günü şarkıları. Dinleyin ve paylaşın!",
+    "numTracks": 230,
+    "publisher": { "@type": "Organization", "name": "Umut Ahmet", "url": "https://seninsiten.com" }
+  }
+  </script>
+
+  <!-- UI Stilleri (tek dosyada çalışsın diye gömdüm) -->
+  <style>
+    :root {
+      --bg:#0b0f19; --card:#121927; --muted:#9fb3c8; --text:#e6edf3; --accent:#4fc3f7;
+    }
+    *{box-sizing:border-box} body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
+      background:linear-gradient(180deg,var(--bg),#111827); color:var(--text)}
+    header{max-width:960px;margin:28px auto 12px;padding:0 16px;text-align:center}
+    h1{font-size:28px;margin:0 0 8px}
+    p.lead{margin:0;color:var(--muted)}
+    .search-wrap{max-width:960px;margin:18px auto;padding:0 16px}
+    #search{width:100%;padding:14px 16px;border:1px solid #2a3a51;background:#0f1624;color:var(--text);
+      border-radius:12px;font-size:16px;outline:none}
+    #search:focus{border-color:var(--accent)}
+    .grid{max-width:960px;margin:14px auto;display:grid;grid-template-columns:repeat(2,1fr);gap:10px;padding:0 16px}
+    @media(min-width:560px){.grid{grid-template-columns:repeat(3,1fr)}}
+    @media(min-width:880px){.grid{grid-template-columns:repeat(4,1fr)}}
+    .item{background:var(--card);border:1px solid #1f2a3c;border-radius:12px;padding:10px 12px;cursor:pointer;
+      transition:transform .12s ease, border-color .12s ease}
+    .item:hover{transform:translateY(-2px);border-color:#3b516f}
+    .item a{color:var(--text);text-decoration:none;display:block}
+    .muted{color:var(--muted);font-size:13px;margin-top:4px}
+    #player{max-width:960px;margin:14px auto;padding:0 16px}
+    .card{background:var(--card);border:1px solid #1f2a3c;border-radius:16px;padding:14px}
+    .title-row{display:flex;flex-wrap:wrap;gap:8px;align-items:center;justify-content:space-between;margin-bottom:8px}
+    .title-row h2{margin:0;font-size:18px}
+    .share{display:flex;flex-wrap:wrap;gap:8px;align-items:center;justify-content:center}
+    .chip{display:inline-flex;align-items:center;gap:6px;border:1px solid #2a3a51;background:#0f1624;
+      border-radius:999px;padding:8px 12px;font-size:13px;cursor:pointer;text-decoration:none;color:var(--text)}
+    .chip:hover{border-color:#3b516f}
+    iframe{width:100%;aspect-ratio:16/9;border:0;border-radius:12px}
+    footer{max-width:960px;margin:18px auto 36px;padding:0 16px;color:var(--muted);font-size:13px;text-align:center}
+    .seo-links{max-width:960px;margin:8px auto 0;padding:0 16px}
+    .seo-links a{color:var(--muted);text-decoration:none;margin-right:10px;font-size:12px}
+    .seo-links a:hover{color:#cfe6ff}
+  </style>
+
+  <!-- Fuse.js -->
+  <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2"></script>
 </head>
 <body>
-  <header class="topbar">
+  <header>
     <h1>🎂 İsme Özel Doğum Günü Şarkıları</h1>
-    <div class="search-wrap">
-      <span class="search-icon">🔎</span>
-      <input id="search" type="text" placeholder="İsmini yaz..." autocomplete="off" />
-      <button id="clear" aria-label="Temizle">✖</button>
-    </div>
+    <p class="lead">İsmini yaz → videoyu aç → tek tıkla paylaş 🎉</p>
   </header>
 
-  <!-- Paylaş çubukları (üstte, videonun hemen üstünde olacak) -->
-  <section id="shareBar" class="share hidden" aria-live="polite">
-    <a id="waBtn" class="chip wa" target="_blank" rel="noopener">WhatsApp</a>
-    <a id="fbBtn" class="chip fb" target="_blank" rel="noopener">Facebook</a>
-    <a id="xBtn"  class="chip x"  target="_blank" rel="noopener">X</a>
-    <a id="igBtn" class="chip ig" target="_blank" rel="noopener">Instagram</a>
-    <button id="copyBtn" class="chip ghost">📋 Kopyala</button>
-  </section>
+  <div class="search-wrap">
+    <input id="search" type="text" placeholder="İsmini yaz (örn: Ahmet, Zeynep)..." autocomplete="off" />
+  </div>
 
   <!-- Sonuçlar -->
-  <main class="container">
-    <ul id="results" class="grid"></ul>
+  <div id="results" class="grid" aria-live="polite"></div>
 
-    <!-- Video -->
-    <div id="player" class="video"></div>
-  </main>
+  <!-- Oynatıcı + Paylaşım -->
+  <div id="player"></div>
 
-  <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2"></script>
+  <!-- SEO için link havuzu (JS ile doldurulacak) -->
+  <nav id="seoLinks" class="seo-links" aria-label="İsim linkleri"></nav>
+
+  <footer>
+    <small>© <span id="y"></span> İsme Özel Doğum Günü Şarkıları ·
+      <a href="/" style="color:#cfe6ff">Anasayfa</a>
+    </small>
+  </footer>
+
   <script>
-    // ---- Veriyi yükle (names.json, yoksa isimler.json) ----
-    let fuse, names = [];
-    async function loadNames() {
+    // Yıl
+    document.getElementById('y').textContent = new Date().getFullYear();
+
+    // Global state
+    let NAMES = [];
+    let fuse;
+
+    // youtu.be / watch / shorts → embed dönüştürücü
+    function toEmbed(url) {
       try {
-        let res = await fetch('names.json', { cache: 'no-store' });
-        if (!res.ok) res = await fetch('isimler.json', { cache: 'no-store' });
-        names = await res.json();
-        fuse = new Fuse(names, {
-          keys: ['name'],
-          threshold: 0.3,
-          ignoreLocation: true,
-          distance: 100
-        });
-      } catch (e) {
-        console.error('İsim listesi yüklenemedi:', e);
+        url = url.trim();
+        if (url.includes('youtu.be/')) {
+          const id = url.split('youtu.be/')[1].split(/[?&]/)[0];
+          return 'https://www.youtube.com/embed/' + id;
+        }
+        if (url.includes('/shorts/')) {
+          const id = url.split('/shorts/')[1].split(/[?&]/)[0];
+          return 'https://www.youtube.com/embed/' + id;
+        }
+        const u = new URL(url);
+        if (u.hostname.includes('youtube.com') && u.searchParams.get('v')) {
+          return 'https://www.youtube.com/embed/' + u.searchParams.get('v');
+        }
+        return url; // fallback
+      } catch(e) {
+        return url;
       }
     }
 
-    // ---- Grid’e kart bas ----
-    function renderResults(items) {
-      const grid = document.getElementById('results');
-      grid.innerHTML = '';
-
-      if (!items?.length) {
-        grid.innerHTML = `<li class="empty">Sonuç bulunamadı</li>`;
+    // Arama sonuçlarını çiz
+    function drawResults(list) {
+      const box = document.getElementById('results');
+      box.innerHTML = '';
+      if (!list || list.length === 0) {
+        box.innerHTML = '<div class="muted">Sonuç bulunamadı</div>';
         return;
       }
-
-      items.forEach(({ item }) => {
-        const li = document.createElement('li');
-        li.className = 'card';
-        li.innerHTML = `
-          <button class="card-btn" title="${item.name}">
-            <span class="avatar">🎵</span>
-            <span class="label">${item.name}</span>
-          </button>`;
-        li.querySelector('.card-btn').onclick = () => play(item);
-        grid.appendChild(li);
+      list.forEach(({ item }) => {
+        const a = document.createElement('a');
+        a.href = '?name=' + encodeURIComponent(item.name);
+        a.className = 'item';
+        a.innerHTML = `
+          <span>${item.name}</span>
+          <div class="muted">YouTube’a git</div>
+        `;
+        a.addEventListener('click', (ev) => {
+          ev.preventDefault();
+          selectName(item.name, true);
+        });
+        box.appendChild(a);
       });
     }
 
-    // ---- Video oynat + paylaş linklerini hazırla ----
-    function play(item) {
-      const video = document.getElementById('player');
-      const url = normalizeYoutube(item.youtube || item.youtube_url);
-      if (!url) return;
+    // Paylaşım linklerini hazırla
+    function buildShareLinks(name, youtube) {
+      const pageUrl = location.origin + location.pathname + '?name=' + encodeURIComponent(name);
+      const text = `🎂 ${name} için isme özel doğum günü şarkısı:`;
+      const encodedText = encodeURIComponent(text + ' ' + pageUrl);
 
-      video.innerHTML = `
-        <div class="ratio">
-          <iframe
-            src="${url}"
-            title="${item.name}"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-            referrerpolicy="strict-origin-when-cross-origin">
-          </iframe>
-        </div>`;
+      const whats = `https://api.whatsapp.com/send?text=${encodedText}`;
+      const fb = `https://www.facebook.com/sharer/sharer.php?u=${encodeURIComponent(pageUrl)}`;
+      const tg = `https://t.me/share/url?url=${encodeURIComponent(pageUrl)}&text=${encodeURIComponent(text)}`;
+      const x = `https://x.com/intent/tweet?text=${encodedText}`;
+      const ins = `https://www.instagram.com/`; // Instagram dış paylaşım URL kabul etmez; profil açar.
 
-      updateShare(item.name, url);
-      document.getElementById('shareBar').classList.remove('hidden');
-      // aşağı kaydır (mobilde video görünsün)
-      setTimeout(() => video.scrollIntoView({ behavior: 'smooth', block: 'start' }), 50);
+      return `
+        <div class="share" role="group" aria-label="Paylaşım">
+          <a class="chip" href="${whats}" target="_blank" rel="noopener">📱 WhatsApp</a>
+          <a class="chip" href="${fb}" target="_blank" rel="noopener">📘 Facebook</a>
+          <a class="chip" href="${tg}" target="_blank" rel="noopener">✈️ Telegram</a>
+          <a class="chip" href="${x}" target="_blank" rel="noopener">𝕏 Paylaş</a>
+          <a class="chip" href="${ins}" target="_blank" rel="noopener">📷 Instagram</a>
+          <a class="chip" href="${youtube}" target="_blank" rel="noopener">▶️ YouTube’da Aç</a>
+        </div>
+      `;
     }
 
-    // Kısa YouTube linklerini embed’e çevir
-    function normalizeYoutube(raw) {
-      if (!raw) return null;
-      const u = raw.trim()
-        .replace(/\s+/g,'')
-        .replace(/watch\?v=([A-Za-z0-9_-]+)/, 'embed/$1')
-        .replace(/youtu\.be\/([A-Za-z0-9_-]+)/, 'www.youtube.com/embed/$1')
-        .replace(/\/shorts\/([A-Za-z0-9_-?=]+)/, 'www.youtube.com/embed/$1');
-      return u.startsWith('http') ? u : `https://${u}`;
+    // Seçim + oynatıcıyı çiz
+    function selectName(name, pushUrl=false) {
+      const hit = NAMES.find(n => (n.name || '').toLowerCase() === name.toLowerCase());
+      if (!hit) return;
+
+      if (pushUrl) {
+        const newUrl = location.pathname + '?name=' + encodeURIComponent(hit.name);
+        history.pushState({ name: hit.name }, '', newUrl);
+      }
+
+      const embed = toEmbed(hit.youtube || hit.youtube_url);
+      const player = document.getElementById('player');
+      player.innerHTML = `
+        <div class="card">
+          <div class="title-row">
+            <h2>🎵 ${hit.name} için Doğum Günü Şarkısı</h2>
+            <!-- paylaşım chipleri başlık satırında -->
+            ${buildShareLinks(hit.name, hit.youtube || hit.youtube_url)}
+          </div>
+          <iframe loading="lazy" src="${embed}" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen title="${hit.name}"></iframe>
+        </div>
+      `;
+      // Üstteki paylaşım dışında, iframe altında da istersen gösterilebilir.
     }
 
-    // ---- Paylaş linkleri ----
-    function updateShare(name, embedUrl) {
-      // izleme linki: gömülü yerine normal video linki üretmeye çalış
-      const watchUrl = embedUrl.replace('/embed/', '/watch?v=').replace('www.youtube.com/', 'https://www.youtube.com/');
-
-      const text = `${name} için doğum günü şarkısı 🎂`;
-      const page = location.href.split('#')[0]; // sayfan
-      const shareLink = `${page}?name=${encodeURIComponent(name)}`;
-
-      document.getElementById('waBtn').href =
-        `https://wa.me/?text=${encodeURIComponent(text + ' ' + watchUrl)}`;
-
-      document.getElementById('fbBtn').href =
-        `https://www.facebook.com/sharer/sharer.php?u=${encodeURIComponent(watchUrl)}`;
-
-      document.getElementById('xBtn').href =
-        `https://twitter.com/intent/tweet?text=${encodeURIComponent(text)}&url=${encodeURIComponent(watchUrl)}`;
-
-      // Instagram web paylaşımı olmadığı için profil açalım (istersen değiştir)
-      document.getElementById('igBtn').href = `https://www.instagram.com/`;
-
-      document.getElementById('copyBtn').onclick = async () => {
-        try {
-          await navigator.clipboard.writeText(watchUrl);
-          toast('Bağlantı kopyalandı ✅');
-        } catch {
-          toast('Kopyalanamadı ❌');
-        }
-      };
-      // URL’ye isim ipucu
-      history.replaceState({}, '', `#${encodeURIComponent(name)}`);
+    // ?name=... parametresini oku
+    function getQueryName() {
+      const q = new URLSearchParams(location.search);
+      return q.get('name');
     }
 
-    // ---- Arama ----
+    // SEO için link havuzu (Google JS’i çalıştırsa da net olsun diye)
+    function drawSeoLinks(names) {
+      const wrap = document.getElementById('seoLinks');
+      wrap.innerHTML = names.slice(0, 300).map(n =>
+        `<a href="?name=${encodeURIComponent(n.name)}">${n.name}</a>`
+      ).join('');
+    }
+
+    // Debounce
     let tId;
-    function onSearchInput(e) {
+    function onSearch(e) {
       const q = e.target.value.trim();
       clearTimeout(tId);
       tId = setTimeout(() => {
-        if (!q) {
-          document.getElementById('results').innerHTML = '';
-          return;
-        }
-        renderResults(fuse.search(q, { limit: 24 }));
+        if (!q) { document.getElementById('results').innerHTML = ''; return; }
+        const res = fuse.search(q, { limit: 24 });
+        drawResults(res);
       }, 120);
     }
 
-    function onSearchEnter(e) {
-      if (e.key === 'Enter') {
-        const q = e.target.value.trim();
-        if (!q) return;
-        const r = fuse.search(q, { limit: 1 });
-        if (r.length) play(r[0].item);
+    // Yükleme
+    async function boot() {
+      try {
+        // names.json (alanlar: name, youtube veya youtube_url)
+        const res = await fetch('names.json', { cache: 'no-store' });
+        let data = await res.json();
+
+        // Farklı alan adlarını normalize et
+        NAMES = data.map(x => ({
+          name: x.name?.trim(),
+          youtube: (x.youtube || x.youtube_url || '').trim()
+        })).filter(x => x.name && x.youtube);
+
+        // Fuse araması
+        fuse = new Fuse(NAMES, {
+          keys: ['name'],
+          threshold: 0.3,
+          ignoreLocation: true,
+          isCaseSensitive: false,
+          distance: 100
+        });
+
+        // SEO linkleri
+        drawSeoLinks(NAMES);
+
+        // URL parametresi ile açılış
+        const qName = getQueryName();
+        if (qName) {
+          const exact = NAMES.find(n => n.name.toLowerCase() === qName.toLowerCase());
+          if (exact) selectName(exact.name, false);
+          else {
+            // Yakın sonuç göster
+            const resNear = fuse.search(qName, { limit: 12 });
+            drawResults(resNear);
+          }
+        }
+      } catch (e) {
+        console.error('names.json yüklenemedi:', e);
       }
     }
 
-    function toast(msg) {
-      const el = document.createElement('div');
-      el.className = 'toast';
-      el.textContent = msg;
-      document.body.appendChild(el);
-      setTimeout(() => el.classList.add('show'), 10);
-      setTimeout(() => { el.classList.remove('show'); el.remove(); }, 2200);
-    }
+    document.getElementById('search').addEventListener('input', onSearch);
+    window.addEventListener('popstate', (e) => {
+      const qName = getQueryName();
+      if (qName) selectName(qName, false);
+      else document.getElementById('player').innerHTML = '';
+    });
 
-    // ---- Init ----
-    (async () => {
-      await loadNames();
-      const s = document.getElementById('search');
-      s.addEventListener('input', onSearchInput);
-      s.addEventListener('keydown', onSearchEnter);
-      document.getElementById('clear').onclick = () => {
-        s.value = '';
-        document.getElementById('results').innerHTML = '';
-      };
-      // hash ile gelen isim varsa dene
-      const hash = decodeURIComponent(location.hash.replace('#',''));
-      if (hash) {
-        const r = fuse.search(hash, { limit: 1 });
-        if (r.length) play(r[0].item);
-      }
-    })();
+    boot();
   </script>
 </body>
 </html>
